# zombies_gold_2ed

./: Cargo.toml  SaveTemplate.sl3  rustc-ice-2025-07-11T05_19_16-26344.txt  savetest.txt
assets/: block_damage_generic.bfxrsound  clippy.bbmodel  textures_8x8.KTX2  ui prototype.aesprite.aseprite  ui_8x8.aseprite
assets/shaders/: custom_material.wgsl
src/: main.rs
src/actions/: actions.rs  movement.rs
src/inventory/: hotbar.rs  inventory.rs
src/map/: map.rs
src/mechanics/: mechanics.rs
src/physics/: physics.rs
src/player/: player.rs
src/rendering/: meshers.rs  rendering.rs
src/spatial/: directions.rs  grid3.rs  point.rs  sparse_grid3.rs  spatial.rs
src/stats/: stats.rs
src/ui/: ui.rs
