[package]
name = "zombies_gold_2ed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bevy stuff
bevy = {version = "0.13.2"} #, features = ["basis-universal"]
moonshine-save = "0.3.5"
leafwing-input-manager = "0.13"
bevy_asset_loader = {version = "0.20.0", features = ["2d", "3d"]}
bevy_mod_mipmap_generator = {path = "../!_Local-Plugins/bevy_mod_mipmap_generator"}
iyes_perf_ui = "0.2.3"
# Other
#sark_grids = {path = "../!_Local-Plugins/sark_grids_rs"} #"0.5.8"
#grid-tree = "0.2.0"
#rand = "0.8.5"
fastrand = "2.0.1"
#unicode-segmentation = "1.10.1"
noise = "0.9.0"
itertools = "0.12.1"
derive_more = "0.99.17"
block-mesh = "0.2.0"
#bevy_flycam = {path = "../!_Local-Plugins/bevy_flycam"}
image = "0.24"
flate2 = {version = "1.1.2", features = ["zlib-rs"], default-features = false }
rusqlite = { version = "0.37.0", features = ["bundled"] }
#hex = "0.4.3"
indexmap = "2.10.0"


[features]
console = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
